# piscine_python

./: README.md
0_starting/: Dockerfile  Makefile  docker-compose.yml  requirements.txt
0_starting/ex00/: Hello.py
0_starting/ex01/: format_ft_time.py
0_starting/ex02/: find_ft_type.py
0_starting/ex03/: NULL_not_found.py
0_starting/ex04/: whatis.py
0_starting/ex05/: building.py
0_starting/ex06/: filterstring.py  ft_filter.py
0_starting/ex07/: sos.py
0_starting/ex08/: Loading.py  tester.py
0_starting/ex09/: README.md  pyproject.toml
0_starting/ex09/src/ft_package/: __init__.py  cli.py
0_starting/ex09/src/ft_package.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
