[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "eagle", email = "eagle@42.fr" }]
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Intended Audience :: Education",
  "Topic :: Software Development :: Libraries",
]

# Ceci alimente "Home-page" dans `pip show`
urls = { Homepage = "https://github.com/eagle/ft_package" }

# Un petit binaire (optionnel, utile pour la démo)
[project.scripts]
ft-hello = "ft_package.cli:main"
