[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "eagle", email = "eagle@42.fr" }]
license = { text = "MIT" }
urls = { Homepage = "https://github.com/eagle/ft_package" }
